# Expo-Invoice-Intelligence

./: .gitignore  Dockerfile.api  Dockerfile.ui  README.md  docker-compose.yml  model_versions.json  pyproject.toml  test_ocr.py  test_ocr_simple.py
api/: __init__.py
api/core/: __init__.py  db.py  main.py  predictions_db.py  processing.py  routes.py
api/db/: vector_db.py
api/services/: __init__.py  confidence.py  extractor.py  llm_ocr_postprocessor.py  ocr.py
api/services/rag/: storage_service.py
api/utils/: image_storage.py  model_utils.py  model_version_manager.py
api/utils/cropping/: image_cropper.py
api/utils/scheduler/: retrain_scheduler.py
config_files/: invoice_config.yaml
corrections/: corrections.json  predictions.json
ml/: README.md  retrain_easyocr.py  train.py  train.sh  train_model.py
ml/training_data/: annotation.txt  train_config.json
ml/training_data/en_train_filtered/: labels.csv
ml/training_data/en_val/: labels.csv
tests/: test_extractor.py  test_safety.py
ui/: app.py
